--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
                 <ul class="info-content">
                     <li>
                         <p>
-                            掌握Java, C/C++, Python，Makefile，熟悉Rust；<br>
+                            熟悉Java, C/C++, Python，Makefile，SQL, Rust等；<br>
                             能看懂一些C#，JavaScrpit，php代码；<br>
                             熟悉数组、队列、栈、二叉树、图的基础数据结构；<br>
                             熟悉排序、二分搜索、KMP、DFS、BFS等基础算法；<br>
@@ -241,7 +241,7 @@
                                         (<time>2018.9-2019.1</time>)
                                         <br>
                                         <i class="fa fa-paper-plane-o" aria-hidden="true"></i>
-                                        [目标]动态展示2017.1-2018.12中TIOBE排行前十名变化情况。
+                                        [目标]动态显示满足特定JSON格式的数据。
                                         <br />
                                         <i class="fa fa-users" aria-hidden="true"></i>
                                         [人员]单人项目
@@ -262,7 +262,7 @@
                                         (<time>2019-3-2019.6</time>)
                                         <br>
                                         <i class="fa fa-paper-plane-o" aria-hidden="true"></i>
-                                        [目标]能登陆天猫，搜索天猫商品，并查看、对比不同商品下的评论情况
+                                        [目标]登陆天猫，搜索天猫商品，并查看、对比不同商品下的评论情况
                                         <br />
                                         <i class="fa fa-users" aria-hidden="true"></i>
                                         [人员]与1位同学共同完成。
@@ -295,7 +295,7 @@
                                         (<time>2020.2</time>)
                                         <br>
                                         <i class="fa fa-paper-plane-o" aria-hidden="true"></i>
-                                        [目标]登陆学校教务系统，查询课程成绩，计算任意数门课程的成绩平均后的GPA
+                                        [目标]查询南科大老教务系统中各门科目成绩，并计算任意数门课程GPA加权和。
                                         <br />
                                         <i class="fa fa-users" aria-hidden="true"></i>
                                         [人员]单人项目
