--- a/index.html
+++ b/index.html
@@ -163,32 +163,30 @@
                 </h2>
                 <hr />
                 <ul class="info-content">
-                    <li>
-                        <p>
-                            熟悉Java, C/C++, Python，Makefile，SQL, Rust等；<br>
-                            能看懂一些C#，JavaScrpit，php代码；<br>
-                            熟悉数组、队列、栈、二叉树、图的基础数据结构；<br>
-                            熟悉排序、二分搜索、KMP、DFS、BFS等基础算法；<br>
-                            熟悉Linux，Windows命令行操作；<br>
-                            使用SpringBoot和PostgreSQL编写过网页；<br>
-                            使用Unity制作过游戏；<br>
-                            熟悉基础的计算机网络知识。
-                        </p>
+                    <li>编程能力
+                        <ul class="info-content">
+                            <li>主要使用Java、C++、Rust，偶尔使用Python，能看懂一定的C\#、JavaScript。</li>
+                            <li>熟悉常用的Linux命令行操作，会写MakeFile，能在命令行下完成编写代码、编译运行。</li>
+                            <li>代码风格良好，写代码能力较强，在学校的团队作业中常常负责大部分代码。</li>
+                        </ul>
                     </li>
-                    <li>
-                        <p>
-                            拥有较好的网络搜索能力与自学能力。<br>
-                            利用网络上的教程搭建过Typecho博客、Github Pages静态页面，安装使用过PVE，编译刷写过软路由；<br>
-                            能使用Google、StackOverflow等解决编程中遇到的大部分问题；<br>
-                            从网络学习配置VSCode等开发环境，查找网络编写过MFC，Springboot，PyQt等，自学过Rust。
-                        </p>
+                    <li>算法水平
+                        <ul class="info-content">
+                            <li>熟悉数组、队列、栈、二叉树、图的基础数据结构。</li>
+                            <li>熟悉排序、二分搜索、KMP、DFS、BFS等基础算法。</li>
+                        </ul>
                     </li>
-                    <li>
-                        <p>
-                            拥有较强的代码能力，代码风格良好。<br>
-                            能读懂已有的代码并为其修改、完善功能。
-                            在团队项目里常常负责大部分代码。
-                        </p>
+                    <li>学习能力
+                        <ul class="info-content">
+                            <li>拥有较好的网络搜索能力与自学能力。</li>
+                            <li>能使用Google、StackOverflow等解决编程中遇到的大部分问题。</li>
+                            <li>通过网络学习过Rust，学习使用过SpringBoot、PyQt等。</li>
+                        </ul>
+                    </li>
+                    <li>专业知识
+                        <ul class="info-content">
+                            <li>对基础的计算机网络知识、设计模式等有一定了解。</li>
+                        </ul>
                     </li>
                 </ul>
             </section>
@@ -215,7 +213,7 @@
                 </ul>
             </section>
 
-            <!-- 项目经验 -->
+            <!-- 个人项目 -->
             <section class="project info-unit">
                 <h2>
                     <i class="fa fa-terminal" aria-hidden="true"></i>个人项目
@@ -225,10 +223,6 @@
                     <li>
                         <h3>
                             <span>JavaFX项目</span>
-                            <!-- <span class="link">
-                                <a href="https://github.com/HuaHuaY/Data-Visualization" target="_blank">Demo</a>
-                            </span>
-                            <time>2018.9-2019.1</time> -->
                         </h3>
                         <ul class="info-content">
                             <li>技术栈：JavaFX
@@ -247,7 +241,7 @@
                                         [人员]单人项目
                                         <br />
                                         <i class="fa fa-thumbs-o-up" aria-hidden="true"></i>
-                                        [效果]作为优秀项目展示、演讲
+                                        [效果]这个项目被评为课程优秀项目，并由我在课上演讲介绍内容。
                                     </li>
                                 </ul>
                             </li>
@@ -268,10 +262,10 @@
                                         [人员]与1位同学共同完成。
                                         <br />
                                         <i class="fa fa-bars" aria-hidden="true"></i>
-                                        [贡献]负责50%以上的代码，以及最后的整合工作
+                                        [贡献]我实现了大部分的JavaFX绘制，登录及信息爬取的过程代码编写，以及整合团队队友绘制的部分JavaFX。
                                         <br />
                                         <i class="fa fa-thumbs-o-up" aria-hidden="true"></i>
-                                        [效果]作为优秀项目展示、演讲
+                                        [效果]这个项目被评为课程优秀项目，并由我在课上演讲介绍内容。
                                     </li>
                                 </ul>
                             </li>
@@ -280,17 +274,14 @@
                     <li>
                         <h3>
                             <span>MFC项目</span>
-                            <!-- <span class="link">
-                                <a href="https://github.com/HuaHuaY/Data-Visualization" target="_blank">Demo</a>
-                            </span>
-                            <time>2018.9-2019.1</time> -->
                         </h3>
                         <ul class="info-content">
                             <li>技术栈：MFC、网络编程
                                 <ul class="info-content">
                                     <li>
                                         <span class="link">
-                                            <a href="https://github.com/HuaHuaY/SUSTech_HowManyGPA" target="_blank">SUSTech_HowManyGPA</a>
+                                            <a href="https://github.com/HuaHuaY/SUSTech_HowManyGPA"
+                                                target="_blank">SUSTech_HowManyGPA</a>
                                         </span>
                                         (<time>2020.2</time>)
                                         <br>
@@ -299,6 +290,42 @@
                                         <br />
                                         <i class="fa fa-users" aria-hidden="true"></i>
                                         [人员]单人项目
+                                        <br />
+                                        <i class="fa fa-thumbs-o-up" aria-hidden="true"></i>
+                                        [效果]这个项目能在老教务系统内GPA更新延迟时，方便学生计算GPA。
+                                    </li>
+                                </ul>
+                            </li>
+                        </ul>
+                    </li>
+                </ul>
+            </section>
+
+            <!-- 科研项目 -->
+            <section class="project info-unit">
+                <h2>
+                    <i class="fa fa-terminal" aria-hidden="true"></i>科研项目
+                </h2>
+                <hr />
+                <ul>
+                    <li>
+                        <h3>
+                            <span>Instruction Fuzzing</span>
+                        </h3>
+                        <ul class="info-content">
+                            <li>扫描ARM平台下，在ISA中未记载且能在CPU上运行的指令。
+                                <ul class="info-content">
+                                    <li>
+                                        <span>
+                                            研读论文
+                                        </span>
+                                        (<time>2020.9-2021.1</time>)
+                                        <br>
+                                        <i class="fa fa-paper-plane-o" aria-hidden="true"></i>
+                                        [目标]复现论文《iScanU: A Portable Scanner for Undocumented Instructions on RISC Processors》
+                                        <br />
+                                        <i class="fa fa-thumbs-o-up" aria-hidden="true"></i>
+                                        [效果]我成功编译运行了论文中的代码，得到相同结果。在组会上讲述了程序的运行步骤及细节。
                                     </li>
                                 </ul>
                             </li>
