--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
                                                 target="_blank">Comments
                                                 Crawling</a>
                                         </span>
-                                        (<time>2019-3-2019.6</time>)
+                                        (<time>2019.3-2019.6</time>)
                                         <br>
                                         <i class="fa fa-paper-plane-o" aria-hidden="true"></i>
                                         [目标]登陆天猫，搜索天猫商品，并查看、对比不同商品下的评论情况
